# tokenvest-solana

./: README.md  package-lock.json
backend_call/: .gitignore  Cargo.toml
backend_call/src/: main.rs
file_transfer/: .gitignore
file_transfer/src/: main.rs
frontend/: .env  .eslintrc.json  investment_contract.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tokenvest_campaign.ts
frontend/contract/: investment_smart_contract.json  investment_smart_contract.wasm  investment_smart_contract_ethereum.json
frontend/src/components/: extension.tsx
frontend/src/constants/: auth.ts  cms.ts  footer.ts  (+9 more)
investment_smart_contract/: Cargo.toml  buildscript.js  lib.rs
rust_investment_smart_contract/: lib.rs
sol_investment_smart_contract/: investmentsmartcontract.sol  package-lock.json
solana_investment_contract/: Anchor.toml  CUsersuserDesktopTokenvesttokenvest-polkadotsolana_investment_contracttargetdeploysolana_investment_contract-keypair.json  package-lock.json
solana_investment_contract/app/: app.js
solana_investment_contract/tests/: investment_contract.ts  solana_investment_contract.ts
strapi/: data.db  package-lock.json  package.json  render.yaml
test-ledger/: faucet-keypair.json  genesis.tar.bz2  tower-1_9-BRMfhDDjxn4mtgjQmA8YaGW85QJZpc1x7zypaCgcmrZg.bin.new  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000048.sst  000049.sst  000050.sst  000051.sst  000052.sst  000053.sst  000054.sst  IDENTITY  LOG  LOG.old.1692259781166698  LOG.old.1692263845385122  MANIFEST-000060  OPTIONS-000064  OPTIONS-000066
(+124 files in other folders)
