[package]
name = "backend_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-timers = "0.1.4"
chrono = "0.4.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.28.1", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tokio_schedule = "0.3.0"
